style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

html {
    font-family: 'Montserrat', sans-serif;
}
img {
    max-width: 400px;
}
a:link, a:hover, a:active, a:visited {
    color: steelblue;
    text-decoration: none;
}
a:hover {
    color: #63ffe0;
}

h1, h3 {
    text-align: center;
}
body {
    background-image: linear-gradient(rgb(190, 190, 190), white);
}
body header {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr .4fr;
    align-items:center;
    justify-items:center;
    padding-top:50px;
}

body header img {
    grid-column: 1/4;
    grid-row: 1/2;
    width:600px;
    max-width: 900px;
    box-shadow: 1px 1px 4px 3px #888;
}

body header h2 {
    grid-column: 1/4;
    grid-row: 2/3;
    text-align: center;
    font-size: 2em;
}


body main {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: .5fr 1fr .5fr .5fr .2fr .6fr 400px;
    gap: 30px;
    margin: 0 auto;
    width: 1300px;
    align-items:center;
    justify-items:center;
}

body main .mission {
    grid-column: 1/5;
    grid-row: 1/2;
    text-align: center;
    padding-top: 100px;
    line-height: 1.6;
}
body main .mission strong {
    font-size: 1.5em;
}

body main .health {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 100px 1fr; 
    align-items:center;
    justify-items:left;
    grid-column: 1/5;
    grid-row: 2/3;
}
body main .health h3 {
    grid-column: 1/2;
    grid-row: 1/2;
    font-size: 2em;
}
body main .health img {
    grid-column: 2/3;
    grid-row: 1/3;
    margin:50px;
}
body main .health p {
    grid-column: 1/2;
    grid-row: 2/3;
    font-size: 1.6em;
}

body main .anxiety {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 100px 1fr 1fr 1fr; 
    align-items:center;
    justify-items:center;
    grid-column: 1/5;
    grid-row: 3/4;
}

body main .anxiety h3 {
    grid-column: 2/3;
    grid-row: 1/2;
    font-size: 2em;
}

body main .anxiety img {
    grid-column: 1/2;
    grid-row: 1/4;
    margin:50px;
    height: 500px;
}

body main .anxiety p {
    grid-column: 2/3;
    grid-row: 2/3;
    font-size: 1.6em;
}
body main .anxiety ul {
    grid-column: 2/3;
    grid-row: 3/4;
    font-size: 1.6em;
}

body main .depression {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 100px 1fr; 
    grid-column: 1/5;
    grid-row: 4/5;
}
body main .depression h3 {
    grid-column: 1/2;
    grid-row: 1/2;
    font-size: 2em;
}
body main .depression img {
    grid-column: 2/3;
    grid-row: 1/3;
    margin:50px;
}
body main .depression p {
    grid-column: 1/2;
    grid-row: 2/3;
    font-size: 1.6em;
}

body main .help {
    grid-column: 1/5;
    grid-row: 5/6;
    text-align: center;
    font-size: 4em;
    font-weight: bold;
}

body main .signs {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 50px 1fr 1fr; 
    align-items:center;
    justify-items:center;
    grid-column: 1/5;
    grid-row: 6/7;
}

body main .signs h3 {
    grid-column: 1/3;
    grid-row: 1/2;
    text-align: center;
    font-size: 2.5em;
}
body main .signs .anx {
    grid-column: 1/2;
    grid-row: 2/3;
    text-align: center;
    font-size: 2em;
}
body main .signs #anxul {
    grid-column: 1/2;
    grid-row: 3/5;
    font-size: 1.6em;
}

body main .signs .dep {
    grid-column: 2/3;
    grid-row: 2/3;
    text-align: center;
    font-size: 2em;
}
body main .signs .depul {
    grid-column: 2/3;
    grid-row: 3/5;
    font-size: 1.6em;
}

body main .sidexsideLeft {
    background-color: greenyellow;
    grid-column: 1/3;
    grid-row: 7/8;
    height: 100%;
    font-size: 1.6em;
    padding: 30px;
    margin-top: 100px;
}
body main .sidexsideLeft strong {
    font-size: 1.6em;
}

body main .sidexsideRight {
    background-color: rosybrown;
    grid-column: 3/5;
    grid-row: 7/8;
    height: 100%;
    font-size: 1.6em;
    padding: 30px;
    margin-top: 100px;
}

body main .sidexsideRight strong {
    font-size: 1.6em;
}

body footer {
    margin: 150px;
}
body footer p {
    font-size: 3em;
}
body footer li {
    font-size:1.6em;
}

